# Keeper

./: .dockerignore  .gitignore  AGENT_TASKS.md  CLAUDE.md  Dockerfile  FEATURES.md  README.md  TASKS.md  TEST_REPORT.md  USAGE.md  docker-compose.yml  install.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
deploy/: prometheus.yml
docs/: FEATURES.md  Keeper-项目白皮书.md  agent-loop-design.md  code-review-report.md  memory-roadmap.md  v1.1.0-changelog.md  简历项目素材-运维开发.md
keeper/: Keeper.code-workspace  cli.py  config.py  exceptions.py  validators.py
keeper/agent/: __init__.py  ask_user.py  commands.py  compressor.py  confirm.py  context_injector.py  free_tools.py  hybrid.py  loop.py  memory.py  planner.py  plugins.py  safety.py  state.py  tools_registry.py
keeper/api/: __init__.py  server.py
keeper/compliance/: __init__.py  baseline.py
keeper/core/: agent.py  audit.py
keeper/i18n/: __init__.py
keeper/integrations/: __init__.py  prometheus.py
keeper/knowledge/: __init__.py  fault_patterns.yaml
keeper/nlu/: base.py  langchain_engine.py
keeper/notify/: __init__.py  base.py  dingtalk.py  router.py  wecom.py
keeper/runbook/: __init__.py  executor.py  models.py
keeper/storage/: __init__.py  history.py
keeper/tools/: alert.py  capacity.py  cert_monitor.py  comparator.py  fixer.py  log_analyzer.py  logs.py  notify.py  reporter.py  (+4 more)
scripts/: lock-deps.sh
tests/: conftest.py  test_agent_e2e.py  test_agent_loop.py  test_agent_safety.py  test_agent_tools.py  test_audit.py  test_compressor.py  test_confirm.py  test_fixer_cert.py  test_hybrid.py  test_integration.py  test_logs.py  test_nlu_fast_path.py  test_notify.py  test_phase2.py  test_planner.py  test_reporter.py  test_state.py  test_tier1_coverage.py  test_tier2_basic_coverage.py  test_tier2_tools_coverage.py  test_tools_extended.py  test_validators.py
(+29 files in other folders)
