[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keeper"
version = "1.0.0"
description = "Keeper - 智能运维 Agent，类 Claude Code 的对话式 CLI 工具"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0",
    "click>=8.0",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "httpx>=0.25.0",
    "schedule>=1.2",
]

[project.optional-dependencies]
k8s = [
    "kubernetes>=28.1.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
keeper = "keeper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["keeper*"]
